<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/global_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/prepDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prep_date"
        android:textSize="@dimen/global_form_text_size" />

    <EditText
        android:id="@+id/prepDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_margin"
        android:focusable="false"
        android:textAlignment="center"
        android:textSize="@dimen/edit_text_size" />

    <TextView
        android:id="@+id/prepTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prep_time"
        android:textSize="@dimen/edit_text_size" />

    <EditText
        android:id="@+id/prepTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_margin"
        android:editable="false"
        android:focusable="false"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="@dimen/edit_text_size" />

    <TextView
        android:id="@+id/prepTaken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_margin"
        android:padding="24dp"
        android:text="@string/prep_taken"
        android:textSize="@dimen/edit_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prepNO"
            android:padding="20dp"
            android:layout_width="120dp"
            android:layout_marginEnd="20dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        <Button
            android:id="@+id/prepOK"
            android:layout_width="120dp"
            android:padding="20dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
    </LinearLayout>


</LinearLayout>
