<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/global_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/planningStartDateTextView"
        android:layout_alignParentTop="true"
        android:text="@string/encounter_date"
        android:textSize="@dimen/global_form_text_size"/>

    <EditText
        android:id="@+id/planningStartDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/planningStartDateTextView"
        android:layout_marginBottom="@dimen/global_margin"
        android:editable="false"
        android:textAlignment="center"
        android:textSize="@dimen/edit_text_size"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/planningEndDateTextView"
        android:layout_below="@id/planningStartDateEditText"
        android:text="@string/planning_end_date"
        android:textSize="@dimen/global_form_text_size"/>

    <EditText
        android:id="@+id/planningEndDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/planningEndDateTextView"
        android:layout_marginBottom="@dimen/global_margin"
        android:editable="false"
        android:textAlignment="center"
        android:textSize="@dimen/edit_text_size"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/planningDescriptionTextView"
        android:layout_below="@id/planningEndDateEditText"
        android:text="@string/planning_description"
        android:textSize="@dimen/global_form_text_size"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/addPlanButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Save"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffff"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/planningDescriptionEditView"
        android:layout_below="@id/planningDescriptionTextView"
        android:layout_above="@id/addPlanButton"
        android:layout_marginBottom="@dimen/global_margin"
        android:textSize="@dimen/edit_text_size" />



</RelativeLayout>
